--- a/helm-charts/templates/tezoslink-api.yaml
+++ b/helm-charts/templates/tezoslink-api.yaml
@@ -1,9 +1,46 @@
 ---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+  name: {{ .Values.namespace }}-api
+  namespace: {{ .Values.namespace }}
+  annotations: 
+{{toYaml .Values.ingressApi.annotations | indent 4 }}
+spec:
+  tls:
+  - hosts: {{ .Values.ingressApi.tls.hosts }}
+    secretName: {{ .Values.ingressApi.tls.secretName }}
+  rules:
+  - host: {{ .Values.ingressApi.host }}
+    http:
+      paths:
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: {{ .Values.namespace }}-api
+            port:
+              number: 8000
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: {{ .Values.namespace }}-api
+  namespace: {{ .Values.namespace }}
+  labels:
+spec:
+  ports:
+    - port: 8000
+      name: http
+      targetPort: 8000
+  selector:
+    app: {{ .Values.namespace }}-api
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  namespace: {{ .Values.namespace }}
   name: {{ .Values.namespace }}-api
+  namespace: {{ .Values.namespace }}
   labels:
     app: {{ .Values.namespace }}-api
 spec:
@@ -16,8 +53,14 @@ spec:
       labels:
         app: {{ .Values.namespace }}-api
     spec:
+      imagePullSecrets:
+      - name: docker-pull-secret
       containers:
       - name: {{ .Values.namespace }}-api
-        image: nginx:1.14.2
-        ports:
-        - containerPort: 80
+        imagePullPolicy: {{ .Values.api.image.pullPolicy }}
+        image: "{{ .Values.api.image.repository }}:{{ .Values.api.image.version }}"
+        resources:
+{{toYaml .Values.api.resources | indent 10}}
+        env:
+{{toYaml .Values.api.env | indent 10}}
+        
