--- a/app/dockerfile
+++ b/app/dockerfile
@@ -22,12 +22,16 @@ FROM node:19-alpine AS production
 
 WORKDIR /app
 
-COPY --from=builder /app/public ./public
-COPY --from=builder /app/.next ./.next
-COPY --from=builder /app/node_modules ./node_modules
-COPY --from=builder /app/package.json ./package.json
-
 RUN adduser -D nextjs --uid 10000 && chown -R nextjs /app
+
+COPY --from=builder --chown=nextjs /app/node_modules ./node_modules
+COPY --from=builder --chown=nextjs /app/public ./public
+COPY --from=builder --chown=nextjs /app/src ./src
+COPY --from=builder --chown=nextjs /app/.next ./.next
+
+COPY --from=builder --chown=nextjs /app/package.json ./package.json
+COPY --from=builder --chown=nextjs /app/next.config.js ./next.config.js
+COPY --from=builder --chown=nextjs /app/tsconfig.json ./tsconfig.json
 
 USER nextjs
 
