--- a/app/.dockerignore
+++ b/app/.dockerignore
@@ -1,7 +1,13 @@
 .dockerignore
 .gitignore
 .eslintrc.json
-docker-compose.yml
+docker-compose*
 package-lock.json
-dockerfile
+dockerfile*
 README.md
+node_modules
+.git
+.gitignore
+LICENSE
+.vscode
+.next
