--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
+WEB_LABEL=Web
 WEB_PORT=3000
+WEB_ROOT_URL=/web
+
+API_LABEL=Api
 API_PORT=3001
+API_ROOT_URL=/api/v1
+
+RPC_GATEWAY_LABEL=Rpc gateway
 RPC_GATEWAY_PORT=3002
+RPC_GATEWAY_ROOT_URL=/rpc/v1
