--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "homepage": "https://github.com/smart-chain-fr/tezosLink#readme",
   "dependencies": {
+    "@prisma/client": "^4.9.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
@@ -45,13 +46,15 @@
     "express": "^4.18.2",
     "module-alias": "^2.2.2",
     "next": "^13.1.5",
+    "prisma": "^4.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "reflect-metadata": "^0.1.13",
     "ts-node": "^10.9.1",
     "tslib": "^2.4.1",
     "typedi": "^0.10.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
@@ -59,6 +62,10 @@
     "@types/node": "^18.11.18",
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/uuid": "^9.0.0",
     "nodemon": "^2.0.20"
+  },
+  "prisma": {
+    "schema": "src/common/databases/schema.prisma"
   }
 }
