--- a/helm-charts-v2/templates/proxy/serviceaccount.yaml
+++ b/helm-charts-v2/templates/proxy/serviceaccount.yaml
@@ -1,10 +1,10 @@
-{{- if and .Values.proxy.enabled .Values.proxy.serviceAccount.create }}
+{{ range $network, $value := .Values.proxy }}
+{{- if and $value.enabled $value.serviceAccount.create }}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ template "helpers.serviceAccountName" . }}
-  namespace: {{ include "helpers.namespace" . | quote }}
-  labels: 
-    {{- include "helpers.labels.proxy" . | nindent 4 }}
-automountServiceAccountToken: {{ .Values.proxy.serviceAccount.automountServiceAccountToken }}
+  name: {{ template "helpers.serviceAccountName" (dict "scope" . "root" $) }}
+  namespace: {{ template "helpers.namespace" $ }}
+automountServiceAccountToken: {{ .serviceAccount.automountServiceAccountToken }}
 {{- end }}
+{{- end}}
