App seg 2/front implementation (#2)
Implementation du front existant en nextjs

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,6 +39,10 @@
     "baseUrl": ".",
     "paths": {
       "@Api/*": ["src/api/*"],
+      "@Front/*": ["src/front/*"],
+      "@Assets/*": ["src/front/assets/*"],
+      "@Components/*": ["src/front/components/*"],
+      "@Themes/*": ["src/front/themes/*"],
       "@RpcGateway/*": ["src/rpc-gateway/*"],
       "@Page/*": ["src/pages/*"],
       "@Services/*": ["src/common/services/*"],
