--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -290,7 +290,7 @@ jobs:
 workflows:
   version: 2
   build-scan-push-deploy-stg:
-    when: <<pipeline.parameters.apsrcp>>
+    when: <<pipeline.parameters.src>>
     jobs:
       - run-gitleaks:
           filters: &filters-stg
