--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -445,7 +445,7 @@ workflows:
     when: 
       and:
         - <<pipeline.parameters.devops>>
-        - not: <<pipeline.parameters.app>>
+        - not: <<pipeline.parameters.src>>
     jobs:
       - run-gitleaks:
           filters: 
@@ -463,7 +463,7 @@ workflows:
     when: 
       and:
         - <<pipeline.parameters.devops>>
-        - not: <<pipeline.parameters.app>>
+        - not: <<pipeline.parameters.src>>
     jobs:
       - run-gitleaks:
           filters: 
@@ -487,7 +487,7 @@ workflows:
     when: 
       and:
         - <<pipeline.parameters.devops>>
-        - not: <<pipeline.parameters.app>>
+        - not: <<pipeline.parameters.src>>
     jobs:
       - run-gitleaks:
           filters: 
