--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -6,12 +6,12 @@ orbs:
 parameters:
   project-name:
     type: string
-    description: Name of the global project, it will be used for the container registry, example -> tezosLink (has frontend and backend modules)
-    default: tezosLink
+    description: Name of the global project, it will be used for the container registry, example -> tezoslink (has frontend and backend modules)
+    default: tezoslink
 
   project-module:
     type: string
-    description: Name of the app or module of the project, it will be used for the container registry, for example tezosLink has a front and back app, example -> front
+    description: Name of the app or module of the project, it will be used for the container registry, for example tezoslink has a front and back app, example -> front
     default: back
 
   dockerfile-location:
@@ -169,12 +169,12 @@ jobs:
           name: Save image
           command: > 
               docker save 
-              -o workspace/tezosLink-back.tar 
+              -o workspace/tezoslink-back.tar 
               rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>:1
       - persist_to_workspace:
           root: workspace
           paths:
-            - tezosLink-back.tar
+            - tezoslink-back.tar
   
   scan-docker-image:
     parameters:
@@ -199,7 +199,7 @@ jobs:
                 name: Run Trivy
                 command: >
                     ${HOME}/trivy image 
-                    --input /tmp/workspace/tezosLink-back.tar
+                    --input /tmp/workspace/tezoslink-back.tar
                     -o trivy-output.html 
                     -t "@devops/security/trivy/html.tpl" 
                     -f template 
@@ -214,7 +214,7 @@ jobs:
                 name: Run Trivy
                 command: > 
                   ${HOME}/trivy image 
-                  --input /tmp/workspace/tezosLink-back.tar
+                  --input /tmp/workspace/tezoslink-back.tar
                   <<parameters.args>>
       
   push-docker-image:
@@ -239,7 +239,7 @@ jobs:
           command: docker login rg.fr-par.scw.cloud -u nologin -p $SCW_SECRET_KEY
       - run: 
           name: Load docker image from workspace
-          command: docker load -i /tmp/workspace/tezosLink-back.tar
+          command: docker load -i /tmp/workspace/tezoslink-back.tar
       - run:
           name: Push image
           command: docker push rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>:1
