--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -130,19 +130,19 @@ jobs:
   #         when: on_fail
   #         command: echo 'Please review your tag'
 
-  run-gitleaks:
-    docker:
-      - image: zricethezav/gitleaks:v8.15.0
-    steps:
-      - checkout
-      - run: 
-          name: Create scan directory
-          command: mkdir /tmp/gitleaks
-      - run: 
-          name: Starting scan
-          command: gitleaks detect --source . --log-opts "-p -n 1" -r /tmp/gitleaks/scan.json -v
-      - store_artifacts:
-          path: /tmp/gitleaks/scan.json
+  # run-gitleaks:
+  #   docker:
+  #     - image: zricethezav/gitleaks:v8.15.0
+  #   steps:
+  #     - checkout
+  #     - run: 
+  #         name: Create scan directory
+  #         command: mkdir /tmp/gitleaks
+  #     - run: 
+  #         name: Starting scan
+  #         command: gitleaks detect --source . --log-opts "-p -n 1" -r /tmp/gitleaks/scan.json -v
+  #     - store_artifacts:
+  #         path: /tmp/gitleaks/scan.json
 
   build-docker-image: 
     machine:
@@ -224,7 +224,8 @@ jobs:
       - checkout
       - install-yq
       - attach_workspace:
-          at: /tmp/workspace
+#          at: /tmp/workspace
+          at: /workspace
       - run:
           name: Extract TAG from Chart.yaml
           command: echo "export TAG=$(${HOME}/yq '.appVersion' devops/Chart.yaml )" >> $BASH_ENV
@@ -239,7 +240,8 @@ jobs:
           command: docker login rg.fr-par.scw.cloud -u nologin -p $SCW_SECRET_KEY
       - run: 
           name: Load docker image from workspace
-          command: docker load -i /tmp/workspace/tezoslink-back.tar
+#          command: docker load -i /tmp/workspace/tezoslink-back.tar
+          command: docker load -i /workspace/tezoslink-back.tar
       - run:
           name: Push image
           command: docker push rg.fr-par.scw.cloud/<<pipeline.parameters.project-name>>/<<pipeline.parameters.project-module>>:1
