--- a/.circleci/workflows.yml
+++ b/.circleci/workflows.yml
@@ -130,19 +130,19 @@ jobs:
   #         when: on_fail
   #         command: echo 'Please review your tag'
 
-  # run-gitleaks:
-  #   docker:
-  #     - image: zricethezav/gitleaks:v8.15.0
-  #   steps:
-  #     - checkout
-  #     - run: 
-  #         name: Create scan directory
-  #         command: mkdir /tmp/gitleaks
-  #     - run: 
-  #         name: Starting scan
-  #         command: gitleaks detect --source . --log-opts "-p -n 1" -r /tmp/gitleaks/scan.json -v
-  #     - store_artifacts:
-  #         path: /tmp/gitleaks/scan.json
+  run-gitleaks:
+    docker:
+      - image: zricethezav/gitleaks:v8.15.0
+    steps:
+      - checkout
+      - run: 
+          name: Create scan directory
+          command: mkdir /tmp/gitleaks
+      - run: 
+          name: Starting scan
+          command: gitleaks detect --source . --log-opts "-p -n 1" -r /tmp/gitleaks/scan.json -v
+      - store_artifacts:
+          path: /tmp/gitleaks/scan.json
 
   build-docker-image: 
     machine:
